--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "bin": "src/cmd.js",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,12 @@
   },
   "homepage": "https://github.com/LYSandJ/auto-squash-commit#readme",
   "dependencies": {
-    "execa": "^4.0.3"
+    "@types/node": "^14.11.8",
+    "@types/tmp": "^0.2.0",
+    "execa": "^4.0.3",
+    "tmp": "^0.2.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.3"
   }
 }
