--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "auto-squash-commit",
   "version": "1.0.0",
   "description": "- [ ] 把ID相同的commit合并起来",
-  "bin": "src/cmd.js",
-  "main": "src/index.js",
+  "bin": "dist/cli.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "dev": "npm run build -- --watch"
   },
   "repository": {
@@ -26,6 +26,8 @@
     "tmp": "^0.2.1"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
+    "minimist": "^1.2.5",
     "typescript": "^4.0.3"
   }
 }
