--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "dev": "npm run build -- --watch"
+    "dev": "npm run build -- --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "chalk": "^4.1.0",
+    "jest": "^26.6.1",
     "minimist": "^1.2.5",
     "typescript": "^4.0.3"
   }
